kubernetes/apps/volsync-system/kopia/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kopia
  namespace: volsync-system
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: kopia
      app.kubernetes.io/instance: kopia
      app.kubernetes.io/controller: kopia
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kopia
        app.kubernetes.io/instance: kopia
        app.kubernetes.io/controller: kopia
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: app
          image: ghcr.io/home-operations/kopia:0.23.1@sha256:27da0a33b44e1b902150a6c963514237217464bb13118a95bb056667be93cda5
          args:
            - --without-password
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 5
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 2Gi
          volumeMounts:
            - name: config-file
              mountPath: /config/repository.config
              subPath: repository.config
              readOnly: true
            - name: repository
              mountPath: /repository
            - name: tmpfs
              mountPath: /config/cache
              subPath: cache
            - name: tmpfs
              mountPath: /config/logs
              subPath: logs
      volumes:
        - name: config-file
          configMap:
            name: kopia-repository-configmap
        - name: repository
          nfs:
            server: 10.0.30.4
            path: /volume1/Kubernetes/VolsyncKopia
        - name: tmpfs
          emptyDir: {}
