kubernetes/apps/volsync-system/kopia/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kopia
  namespace: volsync-system
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: internal
      dns:
        query-name: kopia.unscfleet.com
        query-type: A
      url: 1.1.1.1
      conditions:
        - len([BODY]) == 0
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - kopia.unscfleet.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kopia
          port: 80
